--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,8 @@
     "stage-3"
   ],
   "plugins": [
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    "transform-vue-jsx"
   ],
   "env": {
     "test": {
